# NameToUnix

./: .NameToUnix.conf  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Projekt_Struktur.txt  README.md  index.md  info.md  release.md
.github/workflows/: build.yaml
src/: cli.rs  config.rs  main.rs  sanitizer.rs
test/: create_test_tree.sh
